HYD-6776 Remove angular-ui
Remove angular-ui from the old GUI.

It is dead code that we do not seem to reference anywhere.

  - Remove angular-ui.

Signed-off-by: Joe Grund <joe.grund@intel.com>

--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
 
       // Set Dependencies for this portion of the application
       window.dependencies = ['controllers', 'models', 'interceptors', 'ngResource', 'constants',
-        'ui.bootstrap', 'services', 'filters', 'ui', 'directives', 'timing', 'exception'];
+        'ui.bootstrap', 'services', 'filters', 'directives', 'timing', 'exception'];
     </script>
 
     <link rel="stylesheet" href="/old-gui/css/base.css" type="text/css" />
@@ -59,7 +59,6 @@
     <script type="text/javascript" src="/old-gui/js/lib/angular/angular.js"></script>
     <script type="text/javascript" src="/old-gui/js/lib/angular/angular-resource.js"></script>
     <script type="text/javascript" src="/old-gui/js/lib/angular/ui-bootstrap.js"></script>
-    <script type="text/javascript" src="/old-gui/js/lib/angular/angular-ui.js"></script>
     <script type="text/javascript" src="/old-gui/js/lib/sprintf/sprintf.js"></script>
     <script type="text/javascript" src="/old-gui/js/app.js"></script>
     <script type="text/javascript" src="/old-gui/js/app-compatibility.js"></script>
