--- a/templates/backend_error.html
+++ b/templates/backend_error.html
@@ -4,7 +4,7 @@
 <head>
   <link rel="stylesheet" href="<$= conf.staticUrl $>css/base.css" type="text/css" />
   <link rel="stylesheet" href="<$= conf.staticUrl $>css/header.css" type="text/css" />
-  <title>Intel&reg; Manager for Lustre* software</title>
+  <title>Integrated Manager for Lustre</title>
 </head>
 
 <body>
