--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,6 @@
         </script>
 
         <link rel="stylesheet" href="/old-gui/css/base.css" type="text/css" />
-        <link rel="stylesheet" href="/old-gui/css/header.css" type="text/css" />
         <link href="/old-gui/css/datatables.css" rel="stylesheet" type="text/css" />
         <link href="/old-gui/css/smoothness/jquery-ui.css" rel="stylesheet" type="text/css" />
         <link href="/old-gui/css/smoothness/jquery-ui-extend.css" rel="stylesheet" type="text/css" />
@@ -44,8 +43,6 @@
         <link rel="stylesheet" href="/old-gui/js/modules/exception/assets/css/disconnect-dialog.css" type="text/css" />
 
         <link rel="stylesheet" href="/old-gui/js/lib/select-box-it/select-box-it.css" />
-
-        <link rel="icon" href="/old-gui/images/intel.ico" />
 
         <!-- Frameworks -->
         <script type="text/javascript" src="/old-gui/js/lib/jquery.js"></script>
@@ -128,7 +125,7 @@
         <!-- Templates -->
         <$=t ( 'system_status.html') $>
 
-          <title>Intel&reg; Manager for Lustre* software</title>
+        <title>Integrated Manager for Lustre</title>
 </head>
 
 <script type='text/javascript'>
