--- a/templates/installation.html
+++ b/templates/installation.html
@@ -1,10 +1,10 @@
 
 <html>
   <head>
-    <title>Intel&reg; Manager for Lustre* software</title>
+    <title>Integrated Manager for Lustre</title>
   </head>
   <body>
-    <h2>Intel&reg; Manager for Lustre* software</h2>
+    <h2>Integrated Manager for Lustre</h2>
     <p>Installation is not yet complete.  Please login using SSH and run
     the <tt>chroma-config</tt> utility.</p>
   </body>
