--- a/templates/system_status.html
+++ b/templates/system_status.html
@@ -1,72 +1,34 @@
-
 <script language='text/template' id="system_status_template">
     <div class='content'>
-      <div class='ui-widget'>
-        <div style="margin-top: 20px; padding: 0 .7em;" class="ui-helper-clearfix ui-state-highlight ui-corner-all ui-tabs-panel ui-widget">
-            <p>
-                <span class="ui-icon ui-icon-info" style="float: left; margin-right: .3em;"></span>
-                <strong>Note:</strong> This page is for use by support personnel. These performance counters relate
-                to the performance of the server hosting this user interface: they do not describe Lustre or storage
+        <div class='ui-widget'>
+            <div style="margin-top: 20px; padding: 0 .7em;" class="ui-helper-clearfix ui-state-highlight ui-corner-all ui-tabs-panel ui-widget">
+                <p>
+                    <span class="ui-icon ui-icon-info" style="float: left; margin-right: .3em;"></span>
+                    <strong>Note:</strong> This page is for use by support personnel. These performance counters relate
+                    to the performance of the server hosting this user interface: they do not describe Lustre or storage
                 servers.</p>
+            </div>
         </div>
-      </div>
 
-      <table>
-          <tr>
-              <td width="50%" style="vertical-align:top;">
-                  <h4>
-                      Supervisor
-                  </h4>
-                  <table class='supervisor_processes display tight_lines'>
-                      <thead>
-                      <tr>
-                          <th>
-                              Name
-                          </th>
-                          <th>
-                              Description
-                          </th>
-                          <th>
-                              State
-                          </th>
-                      </tr>
-                      </thead>
-                      <tbody>
+        <h4>RabbitMQ</h4>
+        <table class='rabbitmq_queues display tight_lines'>
+            <thead></thead>
+            <tbody></tbody>
+        </table>
 
-                      </tbody>
-                  </table>
-              </td>
-              <td style="vertical-align:top;">
-                  <h4>
-                      RabbitMQ
-                  </h4>
-                  <table class='rabbitmq_queues display tight_lines'>
-                      <thead>
+        <div class='postgres_table_stats'>
 
-                      </thead>
-                      <tbody>
+        </div>
+        <h4>PostgreSQL processes</h4>
+        <table class='pg_stat_activity display tight_lines'>
+            <thead>
+                <tr>
 
-                      </tbody>
-                  </table>
-              </td>
-          </tr>
-      </table>
+                </tr>
+            </thead>
+            <tbody>
 
-      <div class='postgres_table_stats'>
-
-      </div>
-      <h4>
-          PostgreSQL processes
-      </h4>
-      <table class='pg_stat_activity display tight_lines'>
-          <thead>
-          <tr>
-
-          </tr>
-          </thead>
-          <tbody>
-
-          </tbody>
-      </table>
+            </tbody>
+        </table>
     </div>
 </script>
