The old gui is displayed in an iframe and causes multiple scrollbars to appear in both firefox and chrome. The vertical scrollbars should be disabled inside the old gui so that the outer gui can manage them.
Signed-off-by: Will Johnson <wjohnson@whamcloud.com>

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -358,6 +358,10 @@ tr.log_info {
   overflow:auto;
 }
 
+div.toplevel {
+    overflow-y: hidden;
+}
+
 div.toplevel, div.relative {
     position: relative;
     background-color: white;
