Filesystem Detail Chart shows incorrect units for storage statistics
Fixes #22.

The storage metrics on the filesystem detail page and targets should be calculated using the number-formatters algorithm. Unfortunately, the old gui will not allow the repo to be included and bundled, so for now I think it makes sense to replace the functionality in misc.js with the logic in number-formatters.

Signed-off-by: Will Johnson <wjohnson@whamcloud.com>

--- a/templates/base.html
+++ b/templates/base.html
@@ -95,6 +95,8 @@
         <script type="text/javascript" src="/old-gui/js/modules/exception/disconnect-dialog.js"></script>
         <script type="text/javascript" src="/old-gui/js/modules/exception/replay.js"></script>
 
+        <script type="text/javascript" src="/old-gui/js/lib/format-bytes.js"></script>
+        <script type="text/javascript" src="/old-gui/js/lib/format-big-number.js"></script>
         <script type="text/javascript" src="/old-gui/js/misc.js"></script>
         <script type='text/javascript'>
           window.TIME_OFFSET = Math.round((new Date(<$= getServerDate().getTime() $>) - new Date()) / 1000);
