--- a/templates/base.html
+++ b/templates/base.html
@@ -95,8 +95,14 @@
         <script type="text/javascript" src="/old-gui/js/modules/exception/disconnect-dialog.js"></script>
         <script type="text/javascript" src="/old-gui/js/modules/exception/replay.js"></script>
 
-        <script type="text/javascript" src="/old-gui/js/lib/format-bytes.js"></script>
-        <script type="text/javascript" src="/old-gui/js/lib/format-big-number.js"></script>
+        <script type="module">
+          import formatBytes from "/old-gui/js/lib/format-bytes.js";
+          window.formatBytes = formatBytes;
+        </script>
+        <script type="module">
+          import formatBigNumber from "/old-gui/js/lib/format-big-number.js";
+          window.formatBigNumber = formatBigNumber;
+        </script>
         <script type="text/javascript" src="/old-gui/js/misc.js"></script>
         <script type='text/javascript'>
           window.TIME_OFFSET = Math.round((new Date(<$= getServerDate().getTime() $>) - new Date()) / 1000);
