More updates to the action dropdown button. It now sends events to the parent successfully, cleans up event listeners, destroys the instances and frees the memory when removed, hooks into the charts appropriately now and cleans itself on pagination, shows disabled state when locks are present, and fixes the locks streaming issue.

--- a/templates/base.html
+++ b/templates/base.html
@@ -367,7 +367,7 @@
             var href = $(this).attr("href");
             var url = href.replace(r, "");
 
-            parent.postMessage(url, location.origin);
+            parent.postMessage(JSON.stringify({type: "navigation", url}), location.origin);
           });
         });
       </script>
