--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,7 @@
     </script>
 
     <link rel="stylesheet" href="/old-gui/css/base.css" type="text/css" />
+    <link href="/old-gui/css/action-dropdown.css" rel="stylesheet" type="text/css" />
     <link href="/old-gui/css/datatables.css" rel="stylesheet" type="text/css" />
     <link
       href="/old-gui/css/smoothness/jquery-ui.css"
