--- a/static/css/action-dropdown.css
+++ b/static/css/action-dropdown.css
@@ -1,5 +1,32 @@
 .action-dropdown button {
-  width: 75px;
+  color: #fff;
+  background-color: #337ab7;
+  background-image: none;
+  border-color: #2e6da4;
+  padding: 1px 5px 1px 10px;
+  font-size: 12px;
+  line-height: 1.5;
+  border-radius: 3px;
+}
+
+.action-dropdown .btn-group .btn-primary.dropdown-toggle:hover,
+.action-dropdown .btn-group.open .btn-primary.dropdown-toggle,
+.action-dropdown .btn-group.open .btn-primary.dropdown-toggle:hover,
+.action-dropdown .btn-group.open .btn-primary.dropdown-toggle:active
+ {
+  background-color: #286090;
+  border-color: #204d74;
+}
+
+.action-dropdown .btn-group .btn-primary.dropdown-toggle:focus
+{
+  background-color: #286090;
+  border-color: #122b40;
+  outline: none;
+}
+
+.action-dropdown button > i {
+  margin: 0 5px;
 }
 
 .action-dropdown ul.dropdown-menu {
